--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,24 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:12
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -20,6 +38,15 @@ jobs:
 
     - name: Check out code into the Go moudle directory
     - uses: actions/checkout@v3
+
+    - name: Install golang-migrate
+      run: |
+       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
+       sudo mv migrate /usr/bin/migrate
+       which migrate
+
+    - name: Run migrations
+      run: make migrateup
 
     - name: Test
       run: make test
