--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       id: go
 
     - name: Check out code into the Go moudle directory
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: Install golang-migrate
       run: |
